# dd-license-attribution

./: .coveragerc  .ddla-overrides  .gitignore  AGENTS.md  CD2L3pcsv.py  CHANGELOG.md  CONTRIBUTING.md  LICENSE-3rdparty.csv  NOTICE  README.md  collect_apache_notices.py  compose-dev.yaml  ddla-output.txt  generate_3rdparty-csv.py  licenses.txt  licenses2.txt  mypy.ini  overrides.md  pyproject.toml  pytest.ini  repository.datadog.yml  setup.py  static-analysis.datadog.yml
.cursor/: mcp.json
.cursor/rules/: code-style.mdc
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: black.yml  coverage-regression.yml  coverage-unit-test.yml  datadog-sbom.yml  integration-test.yml  linters.yml  mutation-regression.yml  scorecard.yml
dockerfiles/: dev-ospo-tools.dockerfile
docs/: architecture.md  overrides.md
src/dd_license_attribution/adaptors/: datetime.py  os.py
src/dd_license_attribution/artifact_management/: artifact_manager.py  go_package_resolver.py  npm_package_resolver.py  pypi_package_resolver.py  python_env_manager.py  source_code_manager.py
src/dd_license_attribution/cli/: clean_spdx_id_command.py  dd_license_attribution.py  generate_overrides_command.py  generate_sbom_csv_command.py  main_cli.py
src/dd_license_attribution/config/: __init__.py  cli_configs.py  json_config_parser.py  string_formatting_config.py
src/dd_license_attribution/license_cleaner/: llm_client.py  spdx_cleaner.py
src/dd_license_attribution/metadata_collector/: __init__.py  license_checker.py  metadata.py  metadata_collector.py  project_scope.py
src/dd_license_attribution/metadata_collector/strategies/: abstract_collection_strategy.py  cleanup_copyright_metadata_strategy.py  github_repository_collection_strategy.py  github_sbom_collection_strategy.py  gopkg_collection_strategy.py  license_3rdparty_metadata_collection_strategy.py  npm_collection_strategy.py  override_strategy.py  pypi_collection_strategy.py  scan_code_toolkit_metadata_collection_strategy.py
src/dd_license_attribution/overrides_generator/: __init__.py  overrides_generator.py
src/dd_license_attribution/overrides_generator/writers/: __init__.py  abstract_overrides_writer.py  json_overrides_writer.py
src/dd_license_attribution/overrides_generator/writters/: abstract_overrides_writter.py  json_overrides_writter.py
src/dd_license_attribution/report_generator/: __init__.py  report_generator.py
src/dd_license_attribution/report_generator/writters/: __init__.py  abstract_reporting_writter.py  csv_reporting_writter.py
src/dd_license_attribution/utils/: custom_splitting.py  license_utils.py  logging.py
src/ospo_tools/: __init__.py  generate_3rd_party_csv.py
src/ospo_tools/adaptors/: datetime.py  os.py
src/ospo_tools/artifact_management/: artifact_manager.py  python_env_manager.py  source_code_manager.py
src/ospo_tools/cli/: generate_3rd_party_csv.py  get_licenses_copyrights.py
src/ospo_tools/config/: cli_configs.py
src/ospo_tools/metadata_collector/: __init__.py  license_checker.py  metadata.py  metadata_collector.py  project_scope.py  purl_parser.py
src/ospo_tools/metadata_collector/strategies/: abstract_collection_strategy.py  github_repository_collection_strategy.py  github_sbom_collection_strategy.py  go_licenses_collection_strategy.py  gopkg_collection_strategy.py  pypi_collection_strategy.py  scan_code_toolkit_metadata_collection_strategy.py
src/ospo_tools/report_generator/: __init__.py  report_generator.py
src/ospo_tools/report_generator/writters/: abstract_reporting_writter.py  csv_reporting_writter.py
tests/contract/: test_agithub.py  test_external_apis.py  test_github_sbom_filtering.py  test_giturlparse.py  test_llm_apis.py  test_scancode.py  test_spdx_tools.py
tests/integration/test_stratus_red_team_csv/: test_stratus_red_team_csv_report.py
tests/unit/: test_clean_spdx_id_command.py  test_cleanup_copyright_metadata_strategy.py  test_csv_reporting_writter.py  test_custom_splitting.py  test_dd_license_attribution.py  test_generate_overrides_command.py  test_generate_sbom_csv_command.py  test_get_licenses_copyrights.py  test_get_repository_info.py  test_github_repository_collection_strategy.py  test_github_sbom_collection_strategy.py  test_go_licenses_collection_strategy.py  test_go_package_resolver.py  test_gopkg_collection_strategy.py  test_json_config_parser.py  test_json_overrides_writer.py  test_json_overrides_writter.py  test_license_3rdparty_collection_strategy.py  test_license_checker.py  test_license_utils.py  test_llm_client.py  test_main_cli.py  test_metadata_collector.py  test_npm_collection_strategy.py  test_npm_package_resolver.py  test_override_collection_strategy.py  test_overrides_generator.py  test_purl_parser.py  test_pypi_collection_strategy.py  test_pypi_package_resolver.py  test_python_env_manager.py  test_report_generator.py  test_scancode_toolkit_collection_strategy.py  test_source_code_manager.py  test_spdx_cleaner.py
