[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ospo-tools"
version = "0.2.0"
description = "A set of tools to help with the OSPO activities and reporting"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Damian Vicino", email = "damian.vicino@datadoghq.com" },
    { name = "Ara Pulido", email = "ara.pulido@datadoghq.com" }
]
urls = { "Homepage" = "https://github.com/DataDog/ospo-tools" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent"
]
dependencies = [
    "agithub",
    "scancode-toolkit",
    "typer",
    "pytz",
    "giturlparse",
    "ddtrace",
    "beautifulsoup4==4.12.3" # Not a direct dependency but needs to be pin since newer versions are broken
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "pytest-mock",
    "mypy",
    "black",
    "mutmut",
    "types-pytz"
]

[project.scripts]
get-licenses-copyrights = "ospo_tools.cli.get_licenses_copyrights:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "--cov=src/ospo_tools"
xfail_strict = "True"

[tool.mutmut]
paths_to_mutate = ["src/"]
runner = "python -m pytest"

[tool.mypy]
strict = "True"
disallow_untyped_calls = "True"
disallow_untyped_defs = "True"
disallow_incomplete_defs = "True"
check_untyped_defs = "True"
warn_return_any = "True"
warn_unused_ignores = "True"
warn_redundant_casts = "True"

[[tool.mypy.overrides]]
module = "scancode.api"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "scancode"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "scancode.api"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "agithub.GitHub"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "giturlparse"
ignore_missing_imports = true
