[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dd-license-attribution"
version = "0.3.0"
description = "A tool that collects license and copyright information for third party dependencies of a project."
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Damian Vicino", email = "damian.vicino@datadoghq.com" },
    { name = "Ara Pulido", email = "ara.pulido@datadoghq.com" }
]
urls = { "Homepage" = "https://github.com/DataDog/dd-license-attribution" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent"
]
dependencies = [
    "agithub",
    "scancode-toolkit",
    "typer",
    "pytz",
    "giturlparse",
    "requests",
    "beautifulsoup4==4.12.3" # Not a direct dependency but needs to be pin since newer versions are broken
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "pytest-mock",
    "mypy",
    "black",
    "mutmut",
    "types-pytz",
    "types-requests"
]

[project.scripts]
dd-license-attribution = "ospo_tools.cli.dd_license_attribution:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "--cov=src/ospo_tools"
xfail_strict = "True"

[tool.mutmut]
paths_to_mutate = ["src/"]
runner = "python -m pytest"

[tool.mypy]
strict = "True"
disallow_untyped_calls = "True"
disallow_untyped_defs = "True"
disallow_incomplete_defs = "True"
check_untyped_defs = "True"
warn_return_any = "True"
warn_unused_ignores = "True"
warn_redundant_casts = "True"

[[tool.mypy.overrides]]
module = "scancode.api"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "scancode"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "scancode.api"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "agithub.GitHub"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "giturlparse"
ignore_missing_imports = true
