[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dd-license-attribution"
version = "0.5.0"
description = "A tool that collects license and copyright information for third party dependencies of a project."
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Damian Vicino", email = "damian.vicino@datadoghq.com" },
    { name = "Ara Pulido", email = "ara.pulido@datadoghq.com" }
]
urls = { "Homepage" = "https://github.com/DataDog/dd-license-attribution" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent"
]
dependencies = [
    "agithub",
    "scancode-toolkit",
    "typer",
    "pytz",
    "giturlparse",
    "requests",
    "license-expression",
    "openai>=1.0.0",
    "anthropic>=0.18.0",
    "semver>=3.0.0"
]

[project.optional-dependencies]
lint = [
    "black==26.3.1",
    "isort==8.0.1",
    "ruff",
]
dev = [
    "pytest",
    "pytest-cov",
    "pytest-mock",
    "mypy",
    "black==26.3.1",
    "isort==8.0.1",
    "mutmut",
    "pytest-timeout",
    "types-pytz",
    "types-requests"
]

[project.scripts]
dd-license-attribution = "dd_license_attribution.cli.main_cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "--cov=src/dd_license_attribution"
xfail_strict = "True"
filterwarnings = [
    "ignore::UserWarning:typecode.magic2:"
]

[tool.mutmut]
paths_to_mutate = ["src/"]
tests_dir = ["tests/unit/"]
do_not_mutate = ["src/dd_license_attribution/cli/*", "src/dd_license_attribution/adaptors/*", "src/dd_license_attribution/config/*"]
mutate_only_covered_lines = false
pytest_add_cli_args = ["--timeout=30", "--ignore=tests/unit/test_clean_spdx_id_command.py", "--ignore=tests/unit/test_generate_sbom_csv_command.py", "--ignore=tests/unit/test_generate_overrides_command.py"]

[tool.mypy]
strict = "True"
disallow_untyped_calls = "True"
disallow_untyped_defs = "True"
disallow_incomplete_defs = "True"
check_untyped_defs = "True"
warn_return_any = "True"
warn_unused_ignores = "True"
warn_redundant_casts = "True"

[[tool.mypy.overrides]]
module = "scancode.api"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "scancode"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "scancode.api"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "agithub.GitHub"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "giturlparse"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "anthropic"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "license_expression"
ignore_missing_imports = true

[tool.ruff]
src = ["src"]

[tool.ruff.lint]
select = ["S101", "BLE001", "S602", "S605", "S606"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]

[tool.isort]
profile = "black"

[tool.black]
required-version = "26.3.1"
